--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint . --ext .js --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "17.8.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
